[package]
name = "swamp-app"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "Application management"
repository = "https://github.com/swamp/swamp"
categories = ["game-development"]
keywords = ["game", "render"]

[dependencies]
tracing = "0.1.40"

# State, resource and message
swamp-system-state = { path = "../system-state", version = "0.0.10" }
swamp-message = { path = "../message", version = "0.0.10" }
swamp-resource = { path = "../resource", version = "0.0.10" }
swamp-local-resource = { path = "../local-resource", version = "0.0.10" }
# System
swamp-system-runner = { path = "../system-runner", version = "0.0.10" }
swamp-system = { path = "../system", version = "0.0.10" }

[dev-dependencies]
test-log = "0.2.16"
limnus-system-params = { path = "../system-params", version = "0.0.10" }
