[package]
name = "swamp-asset-id"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "ownership asset ids"
repository = "https://github.com/swamp/swamp"
categories = ["game-development"]
keywords = ["game", "asset", "storage"]

[dependencies]
message-channel = "0.0.1"
tracing = "0.1.40"
fixstr = "0.0.1"
colored = "2.1.0"
