[package]
name = "swamp-asset-registry"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "keeps track of asset lifetimes"

[dependencies]
swamp-assets = { path = "../assets", version = "0.0.10" }
future-runner = "0.0.1"
swamp-app = { path = "../app", version = "0.0.10" }
swamp-assets-loader = { path = "../assets-loader", version = "0.0.10" }
swamp-loader = { path = "../loader", version = "0.0.10" }
swamp-loader-plugin = { path = "../loader-plugin", version = "0.0.10" }
swamp-resource = { path = "../resource", version = "0.0.10" }
swamp-system-runner = { path = "../system-runner", version = "0.0.10" }
message-channel = "0.0.1"
chunk-reader = "0.0.1"
tracing = "0.1.40"
limnus-system-params = { path = "../system-params", version = "0.0.10" }
