[package]
name = "swamp-assets-loader"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "loads assets"

[dependencies]
swamp-app = { path = "../app", version = "0.0.10" }
swamp-assets = { path = "../assets", version = "0.0.10" }
swamp-resource = { path = "../resource", version = "0.0.10" }
tracing = "0.1.40"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
