[package]
name = "swamp-audio-sample"
version = "0.0.10"
edition = "2021"

[dependencies]
hound = "3.5.1"
oddio = "0.7.4"
tracing = "0.1.40"

swamp-app = { path = "../app", version = "0.0.10" } # for the plugin
swamp-assets-loader = { path = "../assets-loader", version = "0.0.10" } # to get the loader registry
swamp-assets = { path = "../assets", version = "0.0.10" } # to insert the audio
swamp-asset-registry = { path = "../asset-registry", version = "0.0.10" } # To get the asset name
limnus-audio-mixer = { path = "../audio-mixer", version = "0.0.10" }
