[package]
name = "swamp-basic-input"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "platform neutral input types"


[dependencies]
int_math = "0.0.2"

swamp-message = {path = "../message", version = "0.0.10" }
