[package]
name = "limnus-gamepad-gilrs"
version = "0.0.10"
edition = "2021"

[dependencies]
gilrs = "0.11.0"
limnus-gamepad = { path = "../gamepad", version = "0.0.10" }
swamp-app = { path = "../app", version = "0.0.10" }
limnus-system-params = { path = "../system-params", version = "0.0.10" }
swamp-local-resource = { path = "../local-resource", version = "0.0.10" }
swamp-system-runner = { path = "../system-runner", version = "0.0.10" }
