[package]
name = "limnus"
version = "0.0.10"
edition = "2021"

[dependencies]
swamp-app = { path = "../app", version = "0.0.10" }
swamp-asset-id = { path = "../asset-id", version = "0.0.10" }
swamp-asset-registry = { path = "../asset-registry", version = "0.0.10" }
swamp-assets = { path = "../assets", version = "0.0.10" }
swamp-assets-loader = { path = "../assets-loader", version = "0.0.10" }
swamp-basic-input = { path = "../basic-input", version = "0.0.10" }
limnus-gamepad = { path = "../gamepad", version = "0.0.10" }
limnus-gamepad-gilrs = { path = "../gamepad-gilrs", version = "0.0.10" }
swamp-window-runner = { path = "../window-runner", version = "0.0.10" }
swamp-wgpu-window = { path = "../wgpu-window", version = "0.0.10" }
swamp-log = { path = "../log", version = "0.0.10" }
swamp-loader-plugin = { path = "../loader-plugin", version = "0.0.10" }
swamp-wgpu-math = { path = "../wgpu-math", version = "0.0.10" }
limnus-system-params = { path = "../system-params", version = "0.0.10" }
swamp-screen = { path = "../screen", version = "0.0.10" }
swamp-macros = { path = "../macros", version = "0.0.10" }
swamp-window = { path = "../window", version = "0.0.10" }
swamp-system-runner = { path = "../system-runner", version = "0.0.10" }
swamp-resource = { path = "../resource", version = "0.0.10" }
swamp-message = { path = "../message", version = "0.0.10" }


swamp-audio = { path = "../audio", version = "0.0.10", optional = true }
swamp-audio-sample = { path = "../audio-sample", version = "0.0.10", optional = true }
limnus-audio-stream = { path = "../audio-stream", version = "0.0.10", optional = true }
limnus-audio-mixer = { path = "../audio-mixer", version = "0.0.10", optional = true }


[features]
default = []
audio = ["swamp-audio", "swamp-audio-sample", "limnus-audio-mixer", "limnus-audio-stream"]
