[package]
name = "swamp-loader-plugin"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Plugin for swamp-loader"

[dependencies]
tracing = "0.1.40"

swamp-loader = { path = "../loader", version = "0.0.10" }
swamp-app = { path = "../app", version = "0.0.10" }
message-channel = "0.0.1"
swamp-resource = { path = "../resource", version = "0.0.10" }
