[package]
name = "swamp-loader"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Loads assets for swamp"


[dependencies]
message-channel = "0.0.1"
swamp-assets = { path = "../assets", version = "0.0.10" }
chunk-reader = "0.0.1"
