[package]
name = "swamp-log"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Initializes logging"

[dependencies]
swamp-app = { path = "../app", version = "0.0.10" }
tracing-log = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.1", features = [
    "registry",
    "env-filter",
] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
