[package]
name = "swamp-macros"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "swamp macros specific for the swamp game engine"
repository = "https://github.com/swamp/swamp"
categories = ["game-development"]
keywords = ["game", "derive"]

[dependencies]
quote = "1.0.37"
syn = "2.0.87"

[lib]
proc-macro = true
