[package]
name = "swamp-resource"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "resource container"
repository = "https://github.com/swamp/swamp"
categories = ["game-development"]
keywords = ["game", "resource"]

[dependencies]
swamp-macros = { path = "../macros", version = "0.0.10" }

[dev-dependencies]
