[package]
name = "swamp-screen"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "platform neutral screen and window types"


[dependencies]
swamp-resource = { path = "../resource", version = "0.0.10" }
swamp-message = { path = "../message", version = "0.0.10" }
int_math = "0.0.2"
