[package]
name = "swamp-system-runner"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Runs swamp systems"


[dependencies]
swamp-system = {path = "../system", version = "0.0.10" }
swamp-system-state = {path = "../system-state", version = "0.0.10" }
