[package]
name = "swamp-system-state"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Keeps the state that is provided to systems"


[dependencies]
swamp-resource = { path = "../resource", version = "0.0.10" }
swamp-message = { path = "../message", version = "0.0.10" }

swamp-local-resource = { path = "../local-resource", version = "0.0.10" }
