[package]
name = "swamp-wgpu-window"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "creating and managing a window with rendering surfaces using winit and wgpu"
repository = "https://github.com/swamp/swamp"
categories = ["game-development"]
keywords = ["game", "render", "sprites"]

[dependencies]
wgpu = "23.0.0"
winit = "0.30.5"
swamp-app = { path = "../app", version = "0.0.10" }
swamp-screen = { path = "../screen", version = "0.0.10" }
tracing = "0.1.40"
limnus-system-params = { path = "../system-params", version = "0.0.10" }
swamp-resource = { path = "../resource", version = "0.0.10" }
swamp-system-runner = { path = "../system-runner", version = "0.0.10" }
