[package]
name = "swamp-window-runner"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "winit runner for swamp-app"

[dependencies]
swamp-app = { path = "../app", version = "0.0.10" }
swamp-resource = { path = "../resource", version = "0.0.10" }
swamp-window = { path = "../window", version = "0.0.10" }
swamp-wgpu-window = { path = "../wgpu-window", version = "0.0.10" }
future-runner = { version = "0.0.1", features = ["block"] }
swamp-basic-input = { path = "../basic-input", version = "0.0.10" }
swamp-screen = { path = "../screen", version = "0.0.10" }

winit = "0.30.5"
int_math = "0.0.2"
tracing = "0.1.40"
console_error_panic_hook = "0.1.7"
