[package]
name = "swamp-window"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "Easily create and manage windows across multiple platforms for game applications, leveraging the power of the `winit` library."
repository = "https://github.com/swamp/swamp"
categories = ["game-development"]
keywords = ["game", "window"]

[dependencies]
winit = { version = "0.30.5", features = ["rwh_05"] }
swamp-log = { path = "../log", version = "0.0.10" }

# WASM
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["Document", "Element", "HtmlCanvasElement"] }


[dev-dependencies]
env_logger = "0.11.5"
